# Multi-PlatformAIOrchestrationImplementation

./: .env.example  .env.template  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  package.json  pyproject.toml  requirements.txt  setup-jules.sh  setup-local.sh
.devcontainer/: devcontainer.json  post-create.sh  post-start.sh
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: autonomous-ai-orchestration.yml
archive/src/ai_orchestration/agents/: __init__.py  coordinator.py
archive/src/ai_orchestration/core/: engine.py  orchestrator.py
archive/src/ai_orchestration/intelligence/: __init__.py
archive/src/ai_orchestration/subscription/: manager.py
config/: default.yaml
configs/: auth_config_template.yaml
docs/: AGENT-RECONCILE-COMMENT.md  INTEGRATIONS.md  JULES.md  PR-PREFACE.md
openapi/: openapi.yaml
scripts/: apply_code_blocks.py  apply_file_blocks.py  build.ts  claude-cli.ts  dev-server.ts  dev-setup.sh  gemini-cli.ts  jules-setup.sh  lint.ts  openai-cli.ts  setup-checks.ts
src/: __init__.py  cli.py  main.py  orchestrator.py  server.py
src/agents/: jules.py
src/ai_orchestration/: __init__.py  cli.py
src/ai_orchestration/agents/: __init__.py  coordinator.py
src/ai_orchestration/api/: __init__.py  main.py  models.py  providers.py  server.py
src/ai_orchestration/bridge/: __init__.py  node_cli.py
src/ai_orchestration/core/: __init__.py  engine.py  orchestrator.py
src/ai_orchestration/intelligence/: __init__.py  emergent.py
src/ai_orchestration/providers/: __init__.py  anthropic.py  base.py  google_gemini.py  google_genai.py  huggingface.py  openai.py
src/ai_orchestration/subscription/: __init__.py  manager.py
src/api/: routes.py
src/auth/: unified.py
src/integrations/: firebase.py  google.py  microsoft.py
src/integrations/claude/: client.py
src/integrations/google/: client.py
src/integrations/openai/: client.py
src/monitoring/: performance.py
src/orchestration/: core.py
src/utils/: circuit_breaker.py  retry.py
static/: app.js  index.html  package.json  style.css
tests/: test_api.py  test_api_endpoints.py  test_google_imports.py  test_integration.py  test_orchestrator.py  test_providers.py
tests/integration/: test_multi_agent_coordination.py
tests/unit/: test_orchestration.py
