[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0", 
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
]

[project]
name = "multi-platform-ai-orchestration"
version = "1.0.0"
description = "Strategic Multi-Platform AI Orchestration Implementation with Distributed Autonomous Capabilities"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "AI Orchestration Team"}
]
keywords = ["ai", "orchestration", "distributed", "autonomous", "strategic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "asyncio",
    "aiohttp>=3.8.0",
    "pydantic>=2.0.0",
    "redis>=4.5.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "celery>=5.3.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pyjwt>=2.8.0",
    "cryptography>=41.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "prometheus-client>=0.17.0",
    "structlog>=23.1.0",
    "typer>=0.9.0",
    # Multi-provider AI SDKs
    "google-genai>=0.8.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "huggingface-hub>=0.25.0",
    "transformers>=4.45.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
]

[project.urls]
Homepage = "https://github.com/poisontr33s/Multi-PlatformAIOrchestrationImplementation"
Repository = "https://github.com/poisontr33s/Multi-PlatformAIOrchestrationImplementation"
Issues = "https://github.com/poisontr33s/Multi-PlatformAIOrchestrationImplementation/issues"

[project.scripts]
ai-orchestrator = "ai_orchestration.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=ai_orchestration --cov-report=html --cov-report=term-missing"